--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ classifiers = [
 ]
 dependencies = [
     'event-bus==1.0.2',
-    'numpy==1.24.2',
+    'numpy',
     'scipy==1.10.1',
     'sounddevice==0.4.6',
     'soundfile==0.12.1',
