--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,13 +16,13 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    'event-bus==1.0.2',
+    'event-bus',
     'numpy',
-    'scipy==1.10.1',
-    'sounddevice==0.4.6',
-    'soundfile==0.12.1',
-    'python-osc==1.8.1',
-    'SpeechRecognition==3.10.0',
+    'scipy',
+    'sounddevice',
+    'soundfile',
+    'python-osc',
+    'SpeechRecognition',
 ]
 [project.urls]
 "Homepage" = "https://github.com/Chitasa/VRC_Controller"
